--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="body">Body</string>
     <string name="add">Add</string>
     <string name="save">Save</string>
-    <string name="write_something_down">Write something down</string>
+    <string name="write_something_down">Write something the description here</string>
     <string name="press_the_button_to_add_notes">Press the button to add notes</string>
     <string name="add_notes">Add notes</string>
     <string name="delete_all">Delete all</string>
@@ -23,5 +23,9 @@
     <string name="error_invalid_email">This email address is invalid</string>
     <string name="password_error">Please enter a password</string>
     <string name="error_invalid_password">Please enter a minimum password of 6 characters</string>
+    <string name="open_nav">Open Navigation Drawer</string>
+    <string name="close_nav">Close Navigation Drawer</string>
+    <string name="app_drawer">Navigation Drawer</string>
+
 
 </resources>
